# backend/app/db/models.py
@@ -1,17 +1,27 @@
 from datetime import UTC, datetime
 
-from sqlalchemy import DateTime, Integer, String
-from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column
+from sqlalchemy import DateTime, ForeignKey, Integer, String
+from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column, relationship
 
 
 class Base(DeclarativeBase):
     pass
 
 
+class CafeModel(Base):
+    __tablename__ = "cafes"
+
+    id: Mapped[int] = mapped_column(Integer, primary_key=True)
+    name: Mapped[str] = mapped_column(String(255), nullable=False, unique=True)
+    description: Mapped[str] = mapped_column(String(1000), nullable=False)
+    feedback: Mapped[list["Feedback"]] = relationship(back_populates="cafe")
+
+
 class Feedback(Base):
     __tablename__ = "feedback"
 
     id: Mapped[int] = mapped_column(Integer, primary_key=True)
+    cafe_id: Mapped[int] = mapped_column(ForeignKey("cafes.id"), nullable=False)
     email: Mapped[str] = mapped_column(String(255), nullable=False)
     comment: Mapped[str] = mapped_column(String(1000), nullable=False)
     rating: Mapped[int] = mapped_column(Integer, nullable=False)
@@ -21,3 +31,4 @@ class Feedback(Base):
         default=lambda: datetime.now(UTC),
         nullable=False,
     )
+    cafe: Mapped[CafeModel] = relationship(back_populates="feedback")
